fix product description's overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,6 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+p {
+  word-wrap: break-word;
+}
